--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -111,7 +111,7 @@
 .action-btn {
     background: transparent;
     font-size: 2.2rem;
-    color: rgb(192, 184, 184);
+    color: rgba(22, 24, 35, 1);
     padding: 4px 16px;
     cursor: pointer;
 }
