--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -6,11 +6,11 @@
 
 .container {
     width: var(--default-layout-width);
+    max-width: 100%;
     padding: 0 var(--default-layout-horizontal-spacer);
-    display: flex;
     margin-top: var(--default-layout-header-height);
+    display: flex;
 }
-
 .content {
     flex: 1;
 }
